--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/escolacrud?
+useTimezone=true&serverTimezone=-3
 
+
+spring.datasource.username = root
+
+spring.datasource.password = admin
+spring.jpa.show-sql = true
+
+spring.jpa.hibernate.ddl-auto = create
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
